Improving readability of the Hangman guide, and fixing bug that suggested redundant words

--- a/solver.css
+++ b/solver.css
@@ -88,7 +88,7 @@ table[name='results'] button {
 }
 
 .guide {
-    font-weight: 100;
+    color: blue;
 }
 
 #mode_main div[name='tile'] {
